--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,39 @@
 Django==1.8.4
+gunicorn==19.4.1
+idna==2.2
+incremental==16.10.1
+ipaddress==1.0.18
+ipython==2.4.1
+lxml==3.7.2
+MySQL-python==1.2.5
+mysqlclient==1.3.7
+parsel==1.1.0
+pexpect==4.0.1
+Pillow==2.9.0
+ptyprocess==0.5
+pyasn1==0.1.9
+pyasn1-modules==0.0.8
+pycparser==2.17
+pycurl==7.43.0
+PyDispatcher==2.0.5
+pyOpenSSL==16.2.0
+python-apt==1.1.0b1
+python-Levenshtein==0.12.0
+python-memcached==1.57
+pytz==2016.1
+PyVirtualDisplay==0.2.1
+queuelib==1.4.2
+requests==2.9.1
+Scrapy==1.3.0
+selenium==3.0.2
+service-identity==16.0.0
+simplegeneric==0.8.1
+six==1.10.0
+sorl-thumbnail==12.3
+sqlparse==0.1.18
+Twisted==16.6.0
+Unidecode==0.4.18
+unity-lens-photos==1.0
+virtualenv==15.1.0
+w3lib==1.16.0
+zope.interface==4.3.3
